# whisper-desktop

./: README.md  index.html  package-lock.json  package.json  使い方.txt
.github/workflows/: release.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/cmake/: ggml-portable.cmake
src-tauri/examples/: cli.rs
src-tauri/src/: audio.rs  lib.rs  model.rs  transcribe.rs
