[package]
name = "whisper-desktop"
version = "0.1.0"
description = "Local Whisper transcription desktop app"
authors = ["ZenLab Inc."]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "whisper_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = "0.14"
symphonia = { version = "0.5", features = ["all"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
futures-util = "0.3"
anyhow = "1"
dirs = "5"

[profile.release]
# whisper.cpp benefits heavily from optimization; keep release fast.
opt-level = 3
lto = true
codegen-units = 1
